src/test/ui/issue-59764.stderr
error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:15:33
   |
LL |     use issue_59764::foo::{baz, makro};
   |                                 ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{baz}};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:22:9
   |
LL |         makro,
   |         ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{
LL |         baz,
LL |
LL |     }};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:29:9
   |
LL |         makro
   |         ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{
LL |         baz,
LL |
LL |     }};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:34:33
   |
LL |     use issue_59764::foo::{baz, makro, foobar};
   |                                 ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{baz, foobar}};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:41:9
   |
LL |         makro,
   |         ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{
LL |         baz,
LL |
LL |         foobar,
LL |     }};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:49:9
   |
LL |         makro,
   |         ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{
LL |         baz,
LL |
LL |         foobar
LL |     }};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:55:31
   |
LL |     use issue_59764::{foobaz, foo::makro};
   |                               ^^^^^^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foobaz};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:60:42
   |
LL |     use issue_59764::{foobaz, foo::{baz, makro}};
   |                                          ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foobaz, foo::{baz}};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:69:13
   |
LL |             makro,
   |             ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, 
LL |         foobaz,
LL |         foo::{
LL |             baz,
LL |
LL |         },
 ...

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:79:13
   |
LL |             makro
   |             ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, 
LL |         foobaz,
LL |         foo::{
LL |             baz,
LL |
LL |         }
 ...

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:85:42
   |
LL |     use issue_59764::{foobaz, foo::{baz, makro, barbaz::{barfoo}}};
   |                                          ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foobaz, foo::{baz, barbaz::{barfoo}}};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:94:13
   |
LL |             makro,
   |             ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, 
LL |         foobaz,
LL |         foo::{
LL |             baz,
LL |
LL |             barbaz::{
 ...

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:103:9
   |
LL |     use issue_59764::foo::makro as baz;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::makro as baz;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:108:33
   |
LL |     use issue_59764::foo::{baz, makro as foobar};
   |                                 ^^^^^^^^^^^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro as foobar, foo::{baz}};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:114:5
   |
LL | use issue_59764::foo::makro;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL | use issue_59764::makro;
   |     ^^^^^^^^^^^^^^^^^^

error: cannot determine resolution for the macro `makro`
  --> $DIR/issue-59764.rs:117:1
   |
LL | makro!(bar);
   | ^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error[E0425]: cannot find function `bar` in this scope
  --> $DIR/issue-59764.rs:121:5
   |
LL |     bar();
   |     ^^^ not found in this scope

error: aborting due to 17 previous errors

Some errors occurred: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
